 'Supage Fun' Changelog:
 =======================

* November 7, 2011 -- Version 0.5:
  - All magic words are case-sensitive now and must be written in UPPERCASE.
  - Input of invalid page names (with forbidden characters) will output '' instead of raising a php error. This behavior is adopted
    from {{FULLPAGENAME}} which also outputs '' in that case.
  - New parameter 'filter' for 'SUBPAGES', 'PARENTPAGES' and 'SIBLINGPAGES'. This allows to filter the list of pages by keywords or
    a regular expression (delimiters '/', '%' and '|' allowed, flags 'imsSuUx'. If the string is not considered a valid regex, the
    string is considered a list of keywords (separated by '|' e.g. through a template '{{!}}').
  - Functions output on category pages with link parameter set will no longer create category links but real links how it should be.
  - Language file added.
  - 'SubpageInfo' class put into new file 'SFun_SubpageInfo.php'.
  - Further code cleanup. Magic words overload removed.
  - 'Supage Fun' now is distributed under ISC License and can be found in wikimedia.org svn.


* September 16, 2011 -- Version 0.4:
  - Cleaned-up code, gotten rid of global functions. All useful functions for other extension developers are in 'SubpageInfo' class,
    parser function/variables stuff has its own 'ExtSubpageFun' class now.
  - Function 'NUMBEROFSUBPAGES' now allows the use of parameter 'depth'.
  - Function 'PARENTPAGES' now allows negative 'depth' values to return that many pages starting from the top-level parent.
  - If parameter 'depth' is '0', 'NUMBEROFSUBPAGES' will return '0', 'PARENTPAGES' and 'SUBPAGETITLE' an empty string.
  - Named function Arguments won't accidentally be threated as parameter '1' anymore if no value is given. E.g. '{{PARENTPAGES:depth=}}'
    is possible without confusion now.


* March 24, 2011 -- Version 0.3.2.1:
  - Fit for PHP 5.3: [http://php.net/manual/en/function.split.php Split] function replaced with